--- a/app/views/admin/layout.jade
+++ b/app/views/admin/layout.jade
@@ -45,7 +45,7 @@ block main
                         a(href='/admin/category/categoryList',target="main_frame")
                             i.fa.fa-folder-open &nbsp;文章信息分类
                     li
-                        a(href='/admin/users/userList',target="main_frame")
+                        a(href='/admin/article/articleList',target="main_frame")
                             i.fa.fa-file &nbsp;文章内容管理
                 ul.nav.nav-sidebar
                     li
