--- a/app/views/admin/users/userlist.jade
+++ b/app/views/admin/users/userlist.jade
@@ -28,7 +28,7 @@ block content
             td 登录密码
             td 邮箱
             td 注册时间
-            td 操作
+            td(class="operate") 操作
         for user in users
             tr
                 td= user._id
