--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -1,12 +1,6 @@
 /*
  * Globals
  */
-
-body {
-    font-family: Georgia, "Times New Roman", Times, serif;
-    color: #555;
-}
-
 h1, .h1,
 h2, .h2,
 h3, .h3,
@@ -34,6 +28,7 @@ h6, .h6 {
  */
 
 .blog-masthead {
+    margin-bottom: 20px;
     background-color: #428bca;
     -webkit-box-shadow: inset 0 -2px 5px rgba(0, 0, 0, .1);
     box-shadow: inset 0 -2px 5px rgba(0, 0, 0, .1);
@@ -43,9 +38,13 @@ h6, .h6 {
 .blog-nav-item {
     position: relative;
     display: inline-block;
-    padding: 10px;
+    padding: 15px;
     font-weight: 500;
+    font-size: 1.2em;
     color: #cdddeb;
+}
+.blog-nav {
+    margin-left: 13%;
 }
 
 .blog-nav-item:hover,
@@ -157,7 +156,8 @@ h6, .h6 {
  */
 
 .blog-footer {
-    padding: 40px 0;
+    margin-top: 20px;
+    padding: 20px 0;
     color: #999;
     text-align: center;
     background-color: #f9f9f9;
@@ -167,7 +167,91 @@ h6, .h6 {
 .blog-footer p:last-child {
     margin-bottom: 0;
 }
+.post {
+    margin-bottom: 40px;
+}
 
-.header {
-    margin-top: 20px;
+.post-title {
+    border: 1px solid #eeeeee;
+    border-width: 1px 0;
+    padding: 5px 0;
+}
+
+.post-abstract {
+    margin-bottom: 10px;
+}
+
+.post-meta {
+    font-size: 0.75em;
+}
+
+.post-meta > span {
+    display: inline-block;
+    padding-right: 10px;
+    margin: 0 5px;
+    border-right: 1px dotted #dddddd;
+}
+
+.post-meta > span:first-of-type {
+    margin-left: 0px;
+}
+.post-meta > span:last-of-type {
+    margin-right: 0px;
+    border-right: 0;
+}
+.post-view .post-meta {
+    border-bottom: 1px dotted #dddddd;
+    padding-bottom: 18px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+.post-view .post-content {
+    text-indent: 2em;
+}
+.page-header {
+    text-align: center;
+}
+
+.post-comments,.post-comment-form {
+    margin-top: 40px;
+}
+.post-comment-form {
+    font-size: 16px;
+    font-weight: normal;
+}
+.post-comment-form label {
+    font-family : 微软雅黑,宋体,"Courier New";
+    font-weight: normal;
+}
+
+.post-comment-item {
+    border-bottom: 1px dotted #dddddd;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+.post-comment-email span{
+    padding-left: 20px;
+}
+.post-comment-content {
+    text-indent: 3em;
+}
+
+.login-d {
+    float: right;
+}
+.login-d a {
+    color: #ffffff;
+    padding-left: 5px;
+}
+.login-d a:link {
+    cursor: pointer;
+    color: #ffffff;
+    text-decoration: none;
+}
+.login-d a:hover {
+    cursor: pointer;
+    color: #ffffff;
+}
+.login-d a i{
+    padding-left: 5px;
 }
