--- a/app/views/blog/register/register.jade
+++ b/app/views/blog/register/register.jade
@@ -27,39 +27,40 @@ block content
             div.alert.alert-success
                 =title
             .form-group
-                label.col-sm-3.control-label(for='realName') 真实姓名
+                label.col-sm-4.control-label(for='realName') 真实姓名
                 .col-sm-4
                     input#realName.form-control(type='text',datatype="z2-8",nullmsg="真实姓名不能为空",errormsg="姓名范围在2~8位之间的汉字！",name="realName", placeholder='请输入真实姓名')
                 .Validform_checktip.col-sm-4
             .form-group
-                label.col-sm-3.control-label(for='loginName') 登录名称
+                label.col-sm-4.control-label(for='loginName') 登录名称
                 .col-sm-4
                     input#loginName.form-control(type='text',datatype="s6-20",nullmsg="登录名称不能为空",errormsg="登录名称范围在6~20位之间的字母数字！",name="loginName", placeholder='请输入登录名称')
                 .Validform_checktip.col-sm-4
             .form-group
-                label.col-sm-3.control-label(for='password') 登录密码
+                label.col-sm-4.control-label(for='password') 登录密码
                 .col-sm-4
                     input#password.form-control(type='password',datatype="*6-20",nullmsg="登录密码不能为空",errormsg="登录密码范围在6~20位之间！",name="password", placeholder='请输入登录密码')
                 .Validform_checktip.col-sm-4
             .form-group
-                label.col-sm-3.control-label(for='spassword') 确认密码
+                label.col-sm-4.control-label(for='spassword') 确认密码
                 .col-sm-4
                     input#spassword.form-control(type='password',datatype="*", recheck="password", nullmsg="请再输入一次密码！" ,errormsg="您两次输入的账号密码不一致！", placeholder='请输入确认密码')
                 .Validform_checktip.col-sm-4
             .form-group
-                label.col-sm-3.control-label(for='email') 邮箱地址
+                label.col-sm-4.control-label(for='email') 邮箱地址
                 .col-sm-4
                     input#email.form-control(type='email',datatype="e",nullmsg="邮箱地址不能为空",errormsg="邮箱地址不正确", name="email",placeholder='请输入确认邮箱')
                 .Validform_checktip.col-sm-4
             .form-group
-                label.col-sm-3.control-label(for='inputFile') 图像上传
+                label.col-sm-4.control-label(for='inputFile') 图像上传
                 .col-sm-4
-                    input#inputFile.form-control(type='file' name="person",multiple='mutiple')
+                    div.personFile(style="display:none")
+                    input#inputFile.form-control(type='file', name="person",multiple='multiple')
             .form-group
                 .col-sm-12.btn-toolbars
                     button.btn.btn-success(type='submit') 注册
                     span &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    button.btn.btn-default(type='button') 返回
+                    button.btn.btn-default(type='button') 重置
 block selfScript
     script(src="/components/Validform/Validform.js")
     script.
