--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -322,13 +322,14 @@ h6, .h6 {
     padding: 20px;
 }
 
-.center-top > .content >.show-d> img {
+.center-top > .content > .show-d > img {
     border-radius: 50%;
     max-height: 80px;
     width: 80px;
     height: 80px;
     max-width: 80px;
 }
+
 .center-top > .content > .show-d div {
     padding-left: 10%;
     width: 100%;
@@ -345,4 +346,37 @@ h6, .h6 {
     width: 100%;
     height: 1px;
     border: 1px dotted #00B7FF;
+}
+
+.tab-content {
+    font-size: 16px !important;
+}
+
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover {
+    background-color: #4FD953;
+    border: 1px solid #4FD953;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+.articleList {
+    margin-top: 10px;
+}
+
+.articleList a {
+    float: right;
+    text-align: center;
+}
+
+.operate {
+    text-align: center;
+}
+
+.pictures {
+    margin-top: 10px;
+    border: 1px solid #f2f2f2;
+}
+
+#tab2 {
+
 }
