修改权限的过滤

--- a/app/views/blog/center/center.jade
+++ b/app/views/blog/center/center.jade
@@ -1,91 +1,99 @@
 extends ../center-layout
 append css
-    link(rel='stylesheet', href='/css/blog.css')
-    style(type="text/css").
-        .Validform_wrong {
-            color: red;
-        }
+	link(rel='stylesheet', href='/css/blog.css')
+	style(type="text/css").
+		.Validform_wrong {
+			color: red;
+		}
 
-        .Validform_right {
-            color: green;
-        }
+		.Validform_right {
+			color: green;
+		}
 
-        .Validform_checktip {
-            margin-top: 10px;
-        }
+		.Validform_checktip {
+			margin-top: 10px;
+		}
 
-        .sidebar-module {
-            display: none;
-        }
+		.sidebar-module {
+			display: none;
+		}
 
-        a {
-            color: #000000;
-        }
-        .alert {
-            margin-bottom: 0px;
-        }
+		a {
+			color: #000000;
+		}
+
+		.alert {
+			margin-bottom: 0px;
+		}
 block content
-    div.col-xs-12.col-md-12.center-top()
-        div.header 个人中心
-        div.content
-            div.show-d
-                if user != null
-                    img(src="" + user.file[0].path)
-            div.show-d
-                div.col-xs-12.col-md-12 用户名称： &nbsp;
-                    if user != null
-                        = user.realName
-                div.col-xs-7.col-md-7 登录名：&nbsp;
-                    if user != null
-                        = user.loginName
-                div.col-xs-7.col-md-7 邮箱：&nbsp;
-                    if user != null
-                        = user.email
-        hr.hr-d
-        div.content.tab-content
-            <!-- Nav tabs -->
-            ul.nav.nav-tabs(role="tablist",id="maintab")
-                li.active
-                    a(href="#tab1",onclick='showPage("tab1","tab1.php")')
-                        |我的文章
-                li
-                    a(href="#tab2",onclick='showPage("tab2","tab1.php")')
-                        |我的相册
-                li
-                    a(href="#tab3",onclick='showPage("tab3","tab1.php")')
-                        |成长历史
-            <!-- Tab panes -->
-            div.tab-content
-                div#tab1.tab-pane.active
-                    div.articleList.alert.alert-success 我的文章
-                        a(href="#")
-                            i.fa.fa-plus &nbsp;
-                            | 新增
-                    table.articleList.table.table-hover.table-bordered
-                        tr
-                            td 序号
-                            td 标题
-                            td 栏目
-                            td 发布人
-                            td 发布时间
-                            td.operate 操作
+	div.col-xs-12.col-md-12.center-top()
+		div.header 个人中心
+		div.content
+			div.show-d
+				if user != null
+					img(src="" + user.file[0].path)
+			div.show-d
+				div.col-xs-12.col-md-12 用户名称： &nbsp;
+					if user != null
+						= user.realName
+				div.col-xs-7.col-md-7 登录名：&nbsp;
+					if user != null
+						= user.loginName
+				div.col-xs-7.col-md-7 邮箱：&nbsp;
+					if user != null
+						= user.email
+		hr.hr-d
+		div.content.tab-content
+			<!-- Nav tabs -->
+			ul.nav.nav-tabs(role="tablist",id="maintab")
+				li.active
+					a(href="#tab1",onclick='showPage("tab1","tab1.php")')
+						| 我的文章
+				li
+					a(href="#tab2",onclick='showPage("tab2","tab1.php")')
+						| 我的相册
+				li
+					a(href="#tab3",onclick='showPage("tab3","tab1.php")')
+						| 成长历史
+			<!-- Tab panes -->
+			div.tab-content
+				div#tab1.tab-pane.active
+					div.articleList.alert.alert-success 我的文章
+						a(href="#")
+							i.fa.fa-plus &nbsp;
+							| 新增
+					table.articleList.table.table-hover.table-bordered
+						tr
+							td 序号
+							td 标题
+							td 栏目
+							td 发布人
+							td 发布时间
+							td.operate 操作
 
-                div#tab2.tab-pane
-                    div.articleList.alert.alert-success 我的相册
-                        a(href="#")
-                            i.fa.fa-plus &nbsp;
-                            | 新增
-                    div.col-md-4.pictures 这是1<br/>这是1
-                    div.col-md-4.pictures 这是2<br/>这是1
-                    div.col-md-4.pictures 这是3<br/>这是1
-                div#tab3.tab-pane
-                    | tab3
+				div#tab2.tab-pane
+					div.articleList.alert.alert-success 我的相册
+						a#addPic(href="#")
+							i.fa.fa-plus &nbsp;
+							| 新增
+					div.col-md-4.pictures 这是1<br/>这是1
+					div.col-md-4.pictures 这是2<br/>这是1
+					div.col-md-4.pictures 这是3<br/>这是1
+				div#tab3.tab-pane
+					| tab3
 block scripts
-    script.
-        function showPage(tabId, url) {
-            $('#maintab a[href="#' + tabId + '"]').tab('show'); // 显示点击的tab页面
-            if ($('#' + tabId).html().length < 20) { // 当tab页面内容小于20个字节时ajax加载新页面
-                //$('#' + tabId).html('<br>' + loadimg + ' 页面加载中，请稍后...'); // 设置页面加载时的loading图片
-                //$('#' + tabId).load("/admin/users/userList"); // ajax加载页面
-            }
-        }
+	script.
+		function showPage (tabId, url) {
+			$ ('#maintab a[href="#' + tabId + '"]').tab ('show'); // 显示点击的tab页面
+			if ($ ('#' + tabId).html ().length < 20) { // 当tab页面内容小于20个字节时ajax加载新页面
+				//$('#' + tabId).html('<br>' + loadimg + ' 页面加载中，请稍后...'); // 设置页面加载时的loading图片
+				//$('#' + tabId).load("/admin/users/userList"); // ajax加载页面
+			}
+		}
+		$ (function () {
+			$ ("#addPic").click (function () {
+				$ (".pictures").css ({
+					display: 'none'
+				})
+			});
+		});
