--- a/app/views/blog/layout.jade
+++ b/app/views/blog/layout.jade
@@ -43,7 +43,7 @@ block main
                         i.fa.fa-caret-down
                     ul(role="menu").dropdown-menu
                         li
-                            a(href="/blog/center") 个人中心
+                            a(href="/blog/user/center") 个人中心
                         li
                             a(href="#") 消息中心
                         li
